changing some code

--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
   <base href="/">
+<!--  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-->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
